[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra-cms"
version = "0.1.0"
description = "AI-powered Editorial Operating System for WordPress."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Astra CMS Contributors" }]
keywords = ["cms", "migration", "wordpress", "headless", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "rich>=13.0,<14.0",
    "httpx>=0.27,<1.0",
    "beautifulsoup4>=4.12,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "mypy>=1.10,<1.17",
    "ruff>=0.5,<1.0",
    "black>=24.0,<25.0",
    "pre-commit>=3.7,<4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
astra = "app.presentation.cli.main:cli"

[project.urls]
Homepage = "https://github.com/ravikantraj25/astra-cms"
Documentation = "https://github.com/ravikantraj25/astra-cms/tree/main/docs"
Repository = "https://github.com/ravikantraj25/astra-cms"
Issues = "https://github.com/ravikantraj25/astra-cms/issues"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 99
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",  # allow assert in tests
    "UP007", # allow X | Y union syntax (compat)
    "A001",  # allow shadowing builtins (ConnectionError, TimeoutError)
    "A004",  # allow import shadowing builtins
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "N806", "A004", "PLR2004"]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
target-version = ["py311"]
line-length = 99

# ---------------------------------------------------------------------------
# MyPy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]
